@@ -1,13 +1,22 @@
 package net.minestom.server.command;
 
-import net.minestom.server.MinecraftServer;
-import net.minestom.server.command.builder.arguments.*;
+import net.minestom.server.command.builder.arguments.Argument;
+import net.minestom.server.command.builder.arguments.ArgumentCommand;
+import net.minestom.server.command.builder.arguments.ArgumentEnum;
+import net.minestom.server.command.builder.arguments.ArgumentGroup;
+import net.minestom.server.command.builder.arguments.ArgumentLiteral;
+import net.minestom.server.command.builder.arguments.ArgumentLoop;
+import net.minestom.server.command.builder.arguments.ArgumentWord;
 import net.minestom.server.entity.Player;
 import net.minestom.server.network.packet.server.play.DeclareCommandsPacket;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.BiConsumer;
 
@@ -16,20 +25,20 @@ final class GraphConverter {
         //no instance
     }
 
-    @Contract("_, _ -> new")
-    public static DeclareCommandsPacket createPacket(Graph graph, @Nullable Player player) {
+    @Contract("_, _, _ -> new")
+    public static DeclareCommandsPacket createPacket(CommandManager manager, Graph graph, @Nullable Player player) {
         List<DeclareCommandsPacket.Node> nodes = new ArrayList<>();
         List<BiConsumer<Graph, Integer>> redirects = new ArrayList<>();
         Map<Argument<?>, Integer> argToPacketId = new HashMap<>();
         final AtomicInteger idSource = new AtomicInteger(0);
-        final int rootId = append(graph.root(), nodes, redirects, idSource, null, player, argToPacketId)[0];
+        final int rootId = append(manager, graph.root(), nodes, redirects, idSource, null, player, argToPacketId)[0];
         for (var r : redirects) {
             r.accept(graph, rootId);
         }
         return new DeclareCommandsPacket(nodes, rootId);
     }
 
-    private static int[] append(Graph.Node graphNode, List<DeclareCommandsPacket.Node> to,
+    private static int[] append(CommandManager manager, Graph.Node graphNode, List<DeclareCommandsPacket.Node> to,
                                 List<BiConsumer<Graph, Integer>> redirects, AtomicInteger id, @Nullable AtomicInteger redirect,
                                 @Nullable Player player, Map<Argument<?>, Integer> argToPacketId) {
         final Graph.Execution execution = graphNode.execution();
@@ -43,7 +52,7 @@ final class GraphConverter {
         final DeclareCommandsPacket.Node node = new DeclareCommandsPacket.Node();
         int[] packetNodeChildren = new int[children.size()];
         for (int i = 0, appendIndex = 0; i < children.size(); i++) {
-            final int[] append = append(children.get(i), to, redirects, id, redirect, player, argToPacketId);
+            final int[] append = append(manager, children.get(i), to, redirects, id, redirect, player, argToPacketId);
             if (append.length > 0) {
                 argToPacketId.put(children.get(i).argument(), append[0]);
             }
@@ -67,7 +76,7 @@ final class GraphConverter {
                 node.name = argument.getId();
                 if (redirect != null) {
                     node.flags |= 0x8;
-                    redirects.add((graph, root) -> node.redirectedNode = redirect.get());
+                    redirects.add((_, _) -> node.redirectedNode = redirect.get());
                 }
             }
             to.add(node);
@@ -78,14 +87,14 @@ final class GraphConverter {
                 node.name = argument.getId();
                 final String shortcut = argCmd.getShortcut();
                 if (shortcut.isEmpty()) {
-                    redirects.add((graph, root) -> node.redirectedNode = root);
+                    redirects.add((_, root) -> node.redirectedNode = root);
                 } else {
-                    redirects.add((graph, root) -> {
-                        var sender = player == null ? MinecraftServer.getCommandManager().getConsoleSender() : player;
+                    redirects.add((graph, _) -> {
+                        var sender = player == null ? manager.getConsoleSender() : player;
                         final List<Argument<?>> args = CommandParser.parser().parse(sender, graph, shortcut).args();
-                        final Argument<?> last = args.get(args.size() - 1);
+                        final Argument<?> last = args.getLast();
                         if (last.allowSpace()) {
-                            node.redirectedNode = argToPacketId.get(args.get(args.size()-2));
+                            node.redirectedNode = argToPacketId.get(args.get(args.size() - 2));
                         } else {
                             node.redirectedNode = argToPacketId.get(last);
                         }
@@ -107,7 +116,7 @@ final class GraphConverter {
                     subNode.name = entry;
                     if (redirect != null) {
                         subNode.flags |= 0x8;
-                        redirects.add((graph, root) -> subNode.redirectedNode = redirect.get());
+                        redirects.add((_, _) -> subNode.redirectedNode = redirect.get());
                     }
                     to.add(subNode);
                     res[i] = id.getAndIncrement();
@@ -121,7 +130,7 @@ final class GraphConverter {
                     Argument<?> entry = entries.get(i);
                     if (i == entries.size() - 1) {
                         // Last will be the parent of next args
-                        final int[] l = append(new GraphImpl.NodeImpl(entry, null, List.of()), to, redirects,
+                        final int[] l = append(manager, new GraphImpl.NodeImpl(entry, null, List.of()), to, redirects,
                                 id, redirect, player, argToPacketId);
                         for (int n : l) {
                             to.get(n).children = node.children;
@@ -132,11 +141,11 @@ final class GraphConverter {
                         return res == null ? l : res;
                     } else if (i == 0) {
                         // First will be the children & parent of following
-                        res = append(new GraphImpl.NodeImpl(entry, null, List.of()), to, redirects, id,
+                        res = append(manager, new GraphImpl.NodeImpl(entry, null, List.of()), to, redirects, id,
                                 null, player, argToPacketId);
                         last = res;
                     } else {
-                        final int[] l = append(new GraphImpl.NodeImpl(entry, null, List.of()), to, redirects,
+                        final int[] l = append(manager, new GraphImpl.NodeImpl(entry, null, List.of()), to, redirects,
                                 id, null, player, argToPacketId);
                         for (int n : last) {
                             to.get(n).children = l;
@@ -145,13 +154,13 @@ final class GraphConverter {
                     }
                 }
                 throw new RuntimeException("Arg group must have child args.");
-            } else if (argument instanceof ArgumentLoop special) {
+            } else if (argument instanceof ArgumentLoop<?> special) {
                 AtomicInteger r = new AtomicInteger();
                 int[] res = new int[special.arguments().size()];
                 List<?> arguments = special.arguments();
                 for (int i = 0, appendIndex = 0; i < arguments.size(); i++) {
                     Object arg = arguments.get(i);
-                    final int[] append = append(new GraphImpl.NodeImpl((Argument<?>) arg, null, List.of()), to,
+                    final int[] append = append(manager, new GraphImpl.NodeImpl((Argument<?>) arg, null, List.of()), to,
                             redirects, id, r, player, argToPacketId);
                     if (append.length == 1) {
                         res[appendIndex++] = append[0];
@@ -171,7 +180,7 @@ final class GraphConverter {
                 node.properties = argument.nodeProperties();
                 if (redirect != null) {
                     node.flags |= 0x8;
-                    redirects.add((graph, root) -> node.redirectedNode = redirect.get());
+                    redirects.add((_, _) -> node.redirectedNode = redirect.get());
                 }
                 if (hasSuggestion) {
                     node.suggestionsType = argument.suggestionType().getIdentifier();
